# SkiaUI

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
Resources/: test1.xml
SkiaUI/: CMakeLists.txt  main.cpp
SkiaUI/base/: window.cpp  window.h
SkiaUI/controls/: button.cpp  button.h  content_view.cpp  content_view.h  image_view.cpp  image_view.h  view.cpp  view.h  view_group.cpp  view_group.h
SkiaUI/core/: parse_xml.cpp  parse_xml.h  register_meta.cpp
SkiaUI/helper/: authoring.hpp  xml_helper.cpp  xml_helper.h
Test/: CMakeLists.txt  test1.cpp
